encountered another white space down the right hand side when scaling down to smaller screens. Attempted fix as before with no-gutters but was unsuccessful - full explanation and resolution added to TESTING.md

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -288,7 +288,6 @@ p {
 /* ----------------------------- Services */
 
 .services-container {
-    margin: 0;
     padding: 0;
 }
 
